'reportes' revised and update, this method work ok but have some warnings, and I update the login panel